--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "devDependencies": {
+    "nodemon": "^2.0.21",
     "yarn": "^1.22.19"
   },
   "name": "fastify-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
