--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "devDependencies": {
+    "@types/node": "^18.15.3",
     "nodemon": "^2.0.21",
+    "tsx": "^3.12.5",
+    "typescript": "^4.9.5",
     "yarn": "^1.22.19"
   },
   "name": "fastify-api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "npx tsx ./server.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,7 @@
   "description": "",
   "dependencies": {
     "@fastify/mysql": "^4.1.0",
-    "fastify": "^4.14.1"
+    "fastify": "^4.14.1",
+    "zod": "^3.21.4"
   }
 }
